--- a/MVC_EF_Start/Views/DatabaseExample/DatabaseOperations.cshtml
+++ b/MVC_EF_Start/Views/DatabaseExample/DatabaseOperations.cshtml
@@ -1,4 +1,4 @@
-﻿@model Customer;
+﻿@model Customer[];
 
 @{
     Layout = null;
@@ -12,13 +12,21 @@
     <title>DatabaseOperations</title>
 </head>
 <body>
-  <h2>Database operations successful</h2>
-    <h3>@Model.Name</h3>
-    @foreach (Order o in @Model.Orders)
+    <h2>Database operations successful</h2>
+
+    <p>Total Customers: @(ViewData["customer_count"])</p>
+    <p>Total Orders: @(ViewData["order_count"])</p>
+
+    @foreach (Customer c in @Model)
     {
-        <p>ID: @(o.Id)</p>
-        <p>Item: @(o.Item.ItemName)</p>
-        <p>Total: @("$" + o.TotalPaid)</p>
+        <h3>@c.Name</h3>
+
+        @foreach (Order o in @c.Orders)
+        {
+            <p>ID: @(o.Id)</p>
+            <p>Item: @(o.Item.ItemName)</p>
+            <p>Total: @("$" + o.TotalPaid)</p>
+        }
     }
 </body>
 </html>
